@@ -401,14 +401,15 @@ static object dbe_get_errfile (DB_ENV *dbe) {
   end_system_call();
   return fd >= 0 ? fixnum(fd) : NIL;
 }
-/* set :ERRPFX to STACK_0 */
+/* set :ERRPFX to STACK_0
+ can trigger GC */
 static void reset_errpfx (DB_ENV *dbe) {
   close_errpfx(dbe);
   if (nullp(STACK_0)) {
     begin_system_call(); dbe->set_errpfx(dbe,NULL); end_system_call();
   } else
     with_string_0(check_string(STACK_0),GLO(misc_encoding), prefix, {
-        char *errpfx = (char*)malloc(prefix_bytelen+1);
+        char *errpfx = (char*)my_malloc(prefix_bytelen+1);
         strcpy(errpfx,prefix);
         begin_system_call(); dbe->set_errpfx(dbe,errpfx); end_system_call();
       });
